worked on spacing issues

--- a/css/about.css
+++ b/css/about.css
@@ -1,18 +1,20 @@
 .yargh{
 display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
+flex-direction: column;;
+/*justify-content: center;*/
+/*align-items: center;*/
+width: 90%;
 }
-.pic{
+/*.pic{
   height: 250px;
   width: 250px;
-  margin-bottom: 25px;
-}
+  margin: 50px;
+}*/
+
 .brandStatement{
   width: 500px;
-padding: 15px;
+padding: 50px;
   text-align: center;
-margin-bottom: 100px;
+margin: 100px;
   border: solid;
 }
